Response to Object

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
   "name": "Center4ResearchPerspectiveTechnologies/NationalCatalogApiClient",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "Apache-2.0",
   "require": {
+    "php": ">=7.1",
     "ext-json": "*",
     "ext-curl": "*"
   },
