Convert cyrillic domain to punycode fixed

--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
   "name": "Center4ResearchPerspectiveTechnologies/NationalCatalogApiClient",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "license": "Apache-2.0",
   "require": {
     "php": ">=7.1",
     "ext-json": "*",
-    "ext-curl": "*"
+    "ext-curl": "*",
+    "ext-intl": "*"
   },
   "autoload": {
     "psr-0": {
